# Visu

./: CMakeLists.txt  README.md
include/visu/: svisu.h  visu.h  visubase.h
include/visu/camera/: base.h  camera.h  orthogonal.h  perspective.h
include/visu/control/: base.h  control.h  keyflow.h  mouserotate.h
include/visu/gtk/: svisu_base.h  svisu_object.h  svisu_primitives.h  visuwidget.h
include/visu/object/: background.h  base.h  lines.h  mesh.h  object.h  points.h
python/: example_show.py  example_visuwidget.py  main.py  svisu_example.py
python/visu/: __init__.py  control.py  svisu.py  visubase.py
python/visu/gtk/: __init__.py  visuwidget.py
python/visu/object/: __init__.py  background.py  base.py  lines.py  mesh.py  points.py
src/: visubase.c
src/camera/: base.c  orthogonal.c  perspective.c
src/control/: base.c  keyflow.c  mouserotate.c
src/gtk/: svisu_base.c  svisu_object.c  svisu_primitives.c  visuwidget.c
src/object/: background.c  base.c  lines.c  linescolored.c  mesh.c  mesh_operations.h  meshcolored.c  meshcoloredmatt.c  objectbase.h  pointnormals.c  pointnormalscolored.c  points.c  pointscolored.c  rawmesh.c  rawmeshcolored.c  shaderprogram.c  shaderprogram.h
tests/: example_show.c  example_svisu.c  light_tool.c  main.c  svisu_example.c  visuwidget_example.c
